# nabir-share

./: README.md
basepairs.datmos.org/: README.md  package-lock.json  package.json  patch-duckdb-hack.py  svelte.config.js  tsconfig.json  vite.config.js
basepairs.datmos.org/src/lib/: arrowUtils.ts  config.ts  dataSourceTables.ts  dbInstance.ts  dbLayer.ts  dbModels.ts  debouncer.ts  duckdb.ts  lazy.ts  lock.ts  metadata.ts  pairing.ts  predefinedFilterLoader.ts
basepairs.datmos.org/src/lib/components/: ClearFilterButton.svelte  ContextHack.svelte  Density2DPlot.svelte  DetailModal.svelte  HistogramPlot.svelte  MolStarMaybe.svelte  OverviewTable.svelte  RangeEditor.svelte  StatsPanel.svelte  filterEditor.svelte  molStarBackend.ts  pairimage.svelte  pairimages.svelte
basepairs.datmos.org/src/routes/: +page.svelte  +page.ts
basepairs.datmos.org/static/pairing_tables/: G-G-cWH.csv.parquet
scripts/: H_bonding_Atoms_from_Isostericity_Table.csv  README.md  apply_filter.py  async_utils.py  ccsv.py  compare_sets.py  dssr_wrapper.py  fr3d_parser.py  gen_contact_images.py  gen_histogram_plots.py  generate_pymol_sessions.ts  pair_csv_parse.py  pair_defs.py  pair_distributions.py  pairs.py  pdb_utils.py  pyproject.toml  requirements.txt  residue_filter.py  run_pairs_script.py  simulate_fr3d_output.py
