[tool.poetry]
name = "basepairing"
version = "0.1.0"
description = ""
authors = ["Stanislav Lukeš <github@exyi.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zstandard = "^0.22.0"
numpy = "^1.26.4"
polars = "^0.20.13"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
ipython = "^8.22.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
xlsxwriter = "^3.2.0"
gemmi = "^0.6.5"
mmcif = "^0.86.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
